# get-all-slack-emojis

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  setup.cfg
all_slack_emojis/: __init__.py  __main__.py  cli.py
