[metadata]
name = get-all-slack-emojis
version = 1.0.0
url = 
author = Kohei Ohno
author-email = discus0434@gmail.com
license = MIT
description = Get all custom emojis in your workspace
long_description = file: README.md
keywords = sample, package, development
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
package_dir = all_slack_emojis
packages = all_slack_emojis
install_requires =
    numpy==1.19.3
    slack-sdk==3.15.2
python_requires = ~=3.8
